--- a/prometheus/prometheus-deployment.yaml
+++ b/prometheus/prometheus-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: prometheus
-  namespace: monitoring
+  namespace: kube-system
 spec:
   replicas: 1
   template:
