--- a/example/cambricon-device-plugin.yml
+++ b/example/cambricon-device-plugin.yml
@@ -14,6 +14,8 @@ spec:
       labels:
         name: cambricon-device-plugin-ds
     spec:
+      nodeSelector:
+        resourceType: mlu
       tolerations:
       # Allow this pod to be rescheduled while the node is in "critical add-ons only" mode.
       # This, along with the annotation above marks this pod as a critical add-on.
