--- a/grafana/grafana-deploy.yaml
+++ b/grafana/grafana-deploy.yaml
@@ -35,7 +35,7 @@ spec:
             - name: GF_SECURITY_ADMIN_USER
               value: "admin"
             - name: GF_SECURITY_ADMIN_PASSWORD
-              value: "Pa22word"
+              value: "P@ssw0rd"
           volumeMounts:
             - name: grafana-persistent-storage
               mountPath: /var/lib/grafana
